# Wasserstein_repo

./: .gitignore  7325_Review_B_and_C.md  README.md  Wasserstein_1D.ipynb  Wasserstein_2D.ipynb  main.py  pyproject.toml  wasserstein_blog.ipynb
