[project]
name = "wasserstein-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
